--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
-<body style="background-color: #445435;">
+<body style="background-color: #445435; font-family: Arial, Helvetica, sans-serif; height: 95%;">
     
     
-    <div style="margin: auto; width:fit-content; height: fit-content; background-color: aqua;">
-        <h1>The Nurgling Games</h1>
-        <h2>The first Nurgling Games will take place during the next Ulthuan</h2>
-    </div>
+        <div style="color:white; text-align: center; width: 100%; height: 70px; position: absolute; top: 40%;">
+            <h1>The Nurgling Games!</h1>
+            <h2>The first Nurgling Games will take place during the next Ulthuan</h2>
+        </div>
+ 
+
+    <footer style="bottom: 1em; position: absolute; margin: auto; width: 95%;">
+        <p style="font-size: 12px; text-align: center;">being created by Fuit Gummy</p>
+    </footer>
 </body>
