added info card

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<title>The Nurgling Games</title>
+  
+  <meta property="og:title" content="The Nurgling Games">
+  <meta property="og:description" content="The next Nurgling Games are happening soon">
+  <meta name="theme-color" content="#445435">
+
 <body style="background-color: #445435; font-family: Arial, Helvetica, sans-serif; height: 95%;">
     
     
@@ -8,6 +14,6 @@
  
 
     <footer style="bottom: 1em; position: absolute; margin: auto; width: 95%;">
-        <p style="font-size: 12px; text-align: center;">being created by Fuit Gummy</p>
+        <p style="font-size: 12px; text-align: center;">Created by Fuit Gummy</p>
     </footer>
 </body>
