--- a/tournament.html
+++ b/tournament.html
@@ -1,5 +1,5 @@
-<link rel="stylesheet" type="text/css" href="styles.css">
 <link rel="stylesheet" type="text/css" href="tournament.css">
+<link rel="stylesheet" type="text/css" href="styles.css">
 
 
 
@@ -13,78 +13,78 @@
 
     <div class="wrapper">
         <div class="item">
-          <div class="item-parent">
-            <p>Fuit Gummy#0006</p>
-          </div>
-
-          <div class="item-childrens">
-            <div class="item-child">
-              <div class="item">
-                <div class="item-parent">
-                  <p>Fuit Gummy#0006</p>
-                </div>
-                <div class="item-childrens">
-                  <div class="item-child">
-                    <div class="item">
-
-                      <div class="item-parent">
-                        <p>Fuit Gummy#0001</p>
-                      </div>
-
-                      <div class="item-childrens">
-                        <div class="item-child">
-                          <p>Fuit Gummy#0001</p>
-                        </div>
-                        <div class="item-child">
-                          <p>Fuit Gummy#0002</p>
-                        </div>
-
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="item-child">
-                    <p>Fuit Gummy#0006</p>
-                  </div>
-
-                </div>
-              </div>
+            <div class="item-parent">
+                <p class="unfilled">______________</p>
             </div>
-            <div class="item-child">
-              <div class="item">
 
-                <div class="item-parent">
-                  <p>Fuit Gummy#0004</p>
-                </div>
-
-                <div class="item-childrens">
-                  <div class="item-child">
+            <div class="item-childrens">
+                <div class="item-child">
                     <div class="item">
-
-                      <div class="item-parent">
-                        <p>Fuit Gummy</p>
-                      </div>
-
-                      <div class="item-childrens">
-                        <div class="item-child">
-                          <p>Fuit Gummy#0005</p>
+                        <div class="item-parent">
+                            <p class="unfilled">______________</p>
                         </div>
-                        <div class="item-child">
-                          <p>Fuit Gummy#0002</p>
-                        </div>
-                      </div>
+                        <div class="item-childrens">
+                            <div class="item-child">
+                                <div class="item">
 
+                                    <div class="item-parent">
+                                        <p class="unfilled">______________</p>
+                                    </div>
+
+                                    <div class="item-childrens">
+                                        <div class="item-child">
+                                            <p>Moxy Black#5796</p>
+                                        </div>
+                                        <div class="item-child">
+                                            <p>Beans#3046</p>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item-child">
+                                <div class="item">
+                                    <div class="item-parent">
+                                        <p class="unfilled">______________</p>
+                                    </div>
+
+                                    <div class="item-childrens">
+                                        <div class="item-child">
+                                            <p>Chan#9222</p>
+                                        </div>
+                                        <div class="item-child">
+                                            <p>Fuit Gummy#0001</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                  </div>
-                  <div class="item-child">
-                    <p>Fuit Gummy#0004</p>
-                  </div>
                 </div>
-              </div>
+                <div class="item-child">
+                    <div class="item">
+                        <div class="item-childrens">
+                            <div class="item-child">
+                                <div class="item">
+                                    <div class="item-parent">
+                                        <p class="unfilled">______________</p>
+                                    </div>
+                                    <div class="item-childrens">
+                                        <div class="item-child">
+                                            <p>pjyamaCat#1289</p>
+                                        </div>
+                                        <div class="item-child">
+                                            <p>Owen#8377</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
+    </div>
 
     <footer style="bottom: 1em; position: absolute; margin: auto; width: 95%;">
         <p style="font-size: 12px; text-align: center;">Created by Fuit Gummy</p>
