--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <meta property="og:title" content="The Nurgling Games">
   <meta property="og:description" content="The next Nurgling Games are happening soon">
   <meta name="theme-color" content="#445435">
+  <meta property="og:image" content="https://nurgling.games/Images/nurgle.png">
+
+  <link rel="shortcut icon" href="Images/favicon.ico" type="image/favicon">
 
 <body style="background-color: #445435; font-family: Arial, Helvetica, sans-serif; height: 95%;">
     
