--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <title>The Nurgling Games</title>
-  
-  <meta property="og:title" content="The Nurgling Games">
-  <meta property="og:description" content="The next Nurgling Games are happening soon">
-  <meta name="theme-color" content="#445435">
-  <meta property="og:image" content="https://nurgling.games/Images/nurgle.png">
 
-  <link rel="shortcut icon" href="Images/favicon.ico" type="image/favicon">
+<meta property="og:title" content="The Nurgling Games">
+<meta property="og:description" content="The next Nurgling Games are happening soon">
+<meta name="theme-color" content="#445435">
+<meta property="og:image" content="https://nurgling.games/Images/nurgle.png">
+
+<link rel="shortcut icon" href="Images/favicon.ico" type="image/favicon">
+
+<link rel="stylesheet" type="text/css" href="styles.css">
 
 <body style="background-color: #445435; font-family: Arial, Helvetica, sans-serif; height: 95%;">
-    
-    
-        <div style="color:white; text-align: center; width: 100%; height: 70px; position: absolute; top: 40%;">
-            <h1>The Nurgling Games!</h1>
-            <h2>The first Nurgling Games will take place during the next Ulthuan</h2>
-        </div>
- 
+
+
+    <div style="color:white; text-align: center; width: 100%; height: 70px; position: absolute; top: 40%;">
+        <h1>The Nurgling Games!</h1>
+        <h2>The first Nurgling Games will take place during the next Ulthuan</h2>
+    </div>
+
 
     <footer style="bottom: 1em; position: absolute; margin: auto; width: 95%;">
         <p style="font-size: 12px; text-align: center;">Created by Fuit Gummy</p>
