--- a/tournament.html
+++ b/tournament.html
@@ -2,6 +2,7 @@
 <link rel="stylesheet" type="text/css" href="styles.css">
 
 
+<link rel="shortcut icon" href="Images/favicon.ico" type="image/favicon">
 
 <body style="background-color: #445435; font-family: Arial, Helvetica, sans-serif; height: 95%;">
 
