--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <title>The Nurgling Games</title>
 
+<meta property="og:site_name" content="The Nurgling Games">
 <meta property="og:title" content="The Nurgling Games">
 <meta property="og:description" content="The next Nurgling Games are happening soon">
 <meta name="theme-color" content="#445435">
