--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta property="og:title" content="The Nurgling Games">
 <meta property="og:description" content="The next Nurgling Games are happening soon">
 <meta name="theme-color" content="#445435">
-<meta property="og:image" content="https://nurgling.games/Images/Nurgle.png">
+<meta property="og:image" content="http://nurgling.games/Images/Nurgle.png">
 <meta name="twitter:card" content="summary_large_image">
 
 <link rel="shortcut icon" href="Images/favicon.ico" type="image/favicon">
