--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <title>The Nurgling Games</title>
 
-<meta property="og:site_name" content="The Nurgling Games">
-<meta property="og:title" content="The Nurgling Games">
-<meta property="og:description" content="The next Nurgling Games are happening soon">
-<meta name="theme-color" content="#445435">
-<meta property="og:image" content="http://nurgling.games/Images/Nurgle.png">
-<meta name="twitter:card" content="summary_large_image">
+<meta property="og:title" content="The Nurgling Games"/>
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://nurglings.games"/>
+<meta property="og:description" content="The next Nurgling Games are happening soon"/>
+<meta property="og:image" content="http://nurgling.games/Images/Nurgle.png"/>
+<meta name="theme-color" content="#445435"/>
 
 <link rel="shortcut icon" href="Images/favicon.ico" type="image/favicon">
 
