--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <meta property="og:title" content="The Nurgling Games"/>
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://nurglings.games"/>
-<meta property="og:description" content="The next Nurgling Games are happening soon"/>
+<meta property="og:url" content="https://nurgling.games"/>
+<meta property="og:description" content="The Nurgling Games will take place during the next Ulthuan"/>
 <meta property="og:image" content="http://nurgling.games/Images/Nurgle.png"/>
 <meta name="theme-color" content="#445435"/>
 
@@ -16,7 +16,7 @@
 
     <div style="color:white; text-align: center; width: 100%; height: 70px; position: absolute; top: 40%;">
         <h1>The Nurgling Games!</h1>
-        <h2>The first Nurgling Games will take place during the next Ulthuan</h2>
+        <h2>The Nurgling Games will take place during the next Ulthuan</h2>
     </div>
 
 
