--- a/index.html
+++ b/index.html
@@ -11,14 +11,8 @@
         <h1>The Nurgling Games!</h1>
     </div>
 
-    <div class="TextBox">
-        <h4>What are The Nurgling Games?</h4>
-        <p>During the Chaos and Conquest Ulthuan event, The Nurgling Games will take place,
-            a tournament that will have players battle with their nurglings to find the one true nurgling king.</p>
-    </div>
-
     <div class="countdownwrapper">
-        <div id="countdowntitle">The Nurgling games start in:</div>
+        <div id="countdowntitle">The Nurgling Games start in:</div>
         <div id="countdown"><img src="Images\thoon.jpg" alt="" style="height: 1em; width: auto;"></div>
 
         <script>
@@ -53,6 +47,11 @@
                 }
             }, 1000);
         </script>
+    </div>
+    <div class="TextBox">
+        <h4>What are The Nurgling Games?</h4>
+        <p>During the Chaos and Conquest Ulthuan event, The Nurgling Games will take place,
+            a tournament that will have players battle with their nurglings to find the one true nurgling king.</p>
     </div>
 
     <br>
