--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <link rel="stylesheet" type="text/css" href="tournament.css">
 <link rel="stylesheet" type="text/css" href="styles.css">
 
+<meta property="og:title" content="The Nurgling Games"/>
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://nurgling.games"/>
+<meta property="og:description" content="The Nurgling Games will take place during the next Ulthuan"/>
+<meta property="og:image" content="http://nurgling.games/Images/Nurgle.png"/>
+<meta name="theme-color" content="#445435"/>
 
 <link rel="shortcut icon" href="Images/favicon.ico" type="image/favicon">
 
