--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="TextBox">
         <h4>How do I sign up</h4>
         <p>-If you're in the Chaos and Conquest discord, message Fuit Gummy with your in game name, region and alliance</p>
-        <p>-If you're not, join, then message Fuit Gummy <a style="color:#beec95;" href="https://discord.gg/chaosconquest">https://discord.gg/chaosconquest</a></p>
+        <p>-If you're not... join with this link (<a style="color:#beec95;" href="https://discord.gg/chaosconquest">https://discord.gg/chaosconquest</a>) then message Fuit Gummy</p>
     </div>
 
     <div class="footer">
