--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <link rel="stylesheet" type="text/css" href="tournament.css">
 <link rel="stylesheet" type="text/css" href="styles.css">
 
+<title>The Nurgling Games</title>
+
 <meta property="og:title" content="The Nurgling Games"/>
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://nurgling.games"/>
