--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <link rel="stylesheet" type="text/css" href="tournament.css">
 <link rel="stylesheet" type="text/css" href="styles.css">
 
-<title>The Nurgling Games</title>
-
 <meta property="og:title" content="The Nurgling Games"/>
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://nurgling.games"/>
+<meta property="og:url" content="https://the.nurgling.games"/>
 <meta property="og:description" content="The Nurgling Games will take place during the next Ulthuan"/>
 <meta property="og:image" content="http://nurgling.games/Images/Nurgle.png"/>
 <meta name="theme-color" content="#445435"/>
@@ -19,64 +17,205 @@
         <h1>The Nurgling Games!</h1>
     </div>
 
-    <div class="countdownwrapper">
-        <div id="countdowntitle">The Nurgling Games start in:</div>
-        <div id="countdown"><img src="Images\thoon.jpg" alt="" style="height: 1em; width: auto;"></div>
-
-        <script>
-            // Set the date we're counting down to
-            var countDownDate = new Date("mar 26, 2022 19:00:00").getTime();
-
-            // Update the count down every 1 second
-            var x = setInterval(function () {
-
-                // Get today's date and time
-                var now = new Date();
-                var nowUTC = new Date(now.getUTCFullYear(), now.getUTCMonth(), now.getUTCDate(), now.getUTCHours(), now.getUTCMinutes(), now.getUTCSeconds());
-
-
-                // Find the distance between now and the count down date
-                var distance = countDownDate - nowUTC;
-
-                // Time calculations for days, hours, minutes and seconds
-                var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-                var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-                var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-                var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-                // Display the result in the element with id="demo"
-                document.getElementById("countdown").innerHTML = hours + "h "
-                    + minutes + "m " + seconds + "s ";
-
-                // If the count down is finished, write some text
-                if (distance < 0) {
-                    clearInterval(x);
-                    document.getElementById("countdown").innerHTML = "EXPIRED";
-                }
-            }, 1000);
-        </script>
-    </div>
     <div class="TextBox">
-        <h4>What are The Nurgling Games?</h4>
+        <h3>What are The Nurgling Games?</h3>
         <p>During the Chaos and Conquest Ulthuan event, The Nurgling Games will take place,
-            a tournament that will have players battle with their nurglings to find the one true nurgling king.</p>
+            a tournament that will have players battle eachother with 500 minions</p>
+    </div>
+
+    <div class="wrapper">
+        <div class="item">
+
+            <div class="item-parent">
+                <div class="tile">
+                    <p class="unfilled">______________</p>
+                    <p class="unfilled">______________</p>
+                </div>
+            </div>
+
+            <div class="item-childrens">
+                <div class="item-child">
+                    <div class="item">
+
+                        <div class="item-parent">
+                            <div class="tile">
+                                <p class="unfilled">______________</p>
+                                <p class="unfilled">______________</p>
+                            </div>
+                        </div>
+
+                        <div class="item-childrens">
+                            <div class="item-child">
+                                <div class="item">
+                                    <div class="item-parent">
+                                        <div class="tile">
+                                            <p class="unfilled">______________</p>
+                                            <p class="unfilled">______________</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="item-childrens">
+
+                                        <div class="item-childrens">
+                                            <div class="item-child">
+                                                <div class="tile">
+                                                    <p class="name">Meow💚</p>
+                                                    <p>Sigvald 8 [HOC1]</p>
+                                                </div>
+                                            </div>
+                                            <div class="item-child">
+                                                <div class="item">
+
+                                                    <div class="item-parent">
+                                                        <div class="tile">
+                                                            <p class="unfilled">_________</p>
+                                                            <p class="unfilled">_________</p>
+                                                        </div>
+                                                    </div>
+
+                                                    <div class="item-childrens">
+                                                        <div class="item-child">
+                                                            <div class="tile">
+                                                                <p class="name">Skarr Headhunter</p>
+                                                                <p>Ludwig 8 [G0RB]</p>
+                                                            </div>
+                                                        </div>
+                                                        <div class="item-child">
+                                                            <div class="tile">
+                                                                <p class="name">Faded</p>
+                                                                <p>Gelt 8 [NYX]</p>
+                                                            </div>
+                                                        </div>
+
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item-child">
+                                <div class="item">
+
+                                    <div class="item-parent">
+                                        <div class="tile">
+                                            <p class="unfilled">______________</p>
+                                            <p class="unfilled">______________</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="item-childrens">
+                                        <div class="item-child">
+                                            <div class="tile">
+                                                <p class="name">Pomp</p>
+                                                <p>Sigvald 8 [FTA]</p>
+                                            </div>
+                                        </div>
+                                        <div class="item-child">
+                                            <div class="tile">
+                                                <p class="name">Will_You_Please</p>
+                                                <p>Gelt 9 [HUNT]</p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item-child">
+                    <div class="item">
+                        <div class="item-parent">
+                            <div class="tile">
+                                <p class="unfilled">______________</p>
+                                <p class="unfilled">______________</p>
+                            </div>
+                        </div>
+                        <div class="item-childrens">
+                            <div class="item-child">
+                                <div class="item">
+
+                                    <div class="item-parent">
+                                        <div class="tile">
+                                            <p class="unfilled">______________</p>
+                                            <p class="unfilled">______________</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="item-childrens">
+                                        <div class="item-child">
+                                            <div class="tile">
+                                                <p class="name">ElCid 💚 gummy</p>
+                                                <p>Gelt 9 [HUNT]</p>
+                                            </div>
+                                        </div>
+                                        <div class="item-child">
+                                            <div class="tile">
+                                                <p class="name">Theimpaler💚asl</p>
+                                                <p>Gelt 9 [HUNT]</p>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item-child">
+                                <div class="item">
+
+                                    <div class="item-parent">
+                                        <div class="tile">
+                                            <p class="unfilled">______________</p>
+                                            <p class="unfilled">______________</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="item-childrens">
+                                        <div class="item-child">
+                                            <div class="tile">
+                                                <p class="name">DukeBefwelington</p>
+                                                <p>Sigvald 8 [WARP]</p>
+                                            </div>
+                                        </div>
+                                        <div class="item-child">
+                                            <div class="tile">
+                                                <p class="name">Qatar</p>
+                                                <p>Gelt 7 [AODX]</p>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <br>
 
     <div class="TextBox">
-        <h4>What do I need to take part</h4>
+        <h3>I'm signed up, what do I do?</h3>
         <ul>
-            <li>Be able to invade Ulthuan (k20, invade pass or whatever)</li>
-            <li>Be willing to unshield for your fights</li>
-            <li>500 nurglings</li>
+            <h4 style="margin-bottom: 3px;">When you know your pairing</h4>
+            <li>Find and message the player that you've been paired with (in game, or discord if you know them there)</li>
+            <li>Decide a time that works for both of you to meet in Ulthuan</li>
+            <li>Choose who is the attacker, and who is the defender</li>
+            <br>
+            <h4 style="margin-bottom: 3px;margin-top: 3px;">When you meet in Ulthuan</h4>
+            <li>The defender will need to send exactly 500 nurglings to a tile (no other troops, no warlords, no champions)</li>
+            <li>The attacker then needs to tile hit with exactly 500 nurglings (no other troops, no warlords, no champions)</li>
+            <br>
+            <li>Get back to Fuit Gummy with the report so that the winner can be put into their next pairing</li>
         </ul>
     </div>
 
     <div class="TextBox">
-        <h4>How do I sign up</h4>
-        <p>-If you're in the Chaos and Conquest discord, message Fuit Gummy with your in game name, region and alliance</p>
-        <p>-If you're not... join with this link (<a style="color:#beec95;" href="https://discord.gg/chaosconquest">https://discord.gg/chaosconquest</a>) then message Fuit Gummy</p>
+        <h3>How do I sign up</h3>
+        <p>Sorry, it's too late to sign up now</p>
     </div>
 
     <div class="footer">
