--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 
                                                     <div class="item-parent">
                                                         <div class="tile">
-                                                            <p class="unfilled">_________</p>
-                                                            <p class="unfilled">_________</p>
+                                                            <p class="name">Skarr Headhunter</p>
+                                                            <p>Ludwig 8 [G0RB]</p>
                                                         </div>
                                                     </div>
 
