--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                                 <div class="item">
                                     <div class="item-parent">
                                         <div class="tile">
-                                            <p class="unfilled">______________</p>
-                                            <p class="unfilled">______________</p>
+                                            <p class="name">Skarr Headhunter</p>
+                                            <p>Ludwig 8 [G0RB]</p>
                                         </div>
                                     </div>
 
