--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 
                                     <div class="item-parent">
                                         <div class="tile">
-                                            <p class="unfilled">______________</p>
-                                            <p class="unfilled">______________</p>
+                                            <p class="name">Pomp</p>
+                                            <p>Sigvald 8 [FTA]</p>
                                         </div>
                                     </div>
 
