--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 
             <div class="item-parent">
                 <div class="tile">
-                    <p class="unfilled">______________</p>
-                    <p class="unfilled">______________</p>
+                    <p class="name">Pomp</p>
+
+                    <p>Sigvald 8 [FTA]</p>
                 </div>
             </div>
 
