--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
 
                                     <div class="item-parent">
                                         <div class="tile">
-                                            <p class="unfilled">______________</p>
-                                            <p class="unfilled">______________</p>
+                                            <p class="name">Qatar</p>
+                                            <p>Gelt 7 [AODX]</p>
                                         </div>
                                     </div>
 
