--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                     <div class="item">
                         <div class="item-parent">
                             <div class="tile">
-                                <p class="unfilled">______________</p>
-                                <p class="unfilled">______________</p>
+                                <p class="name">Qatar</p>
+                                <p>Gelt 7 [AODX]</p>
                             </div>
                         </div>
                         <div class="item-childrens">
@@ -143,7 +143,7 @@
 
                                     <div class="item-parent">
                                         <div class="tile">
-                                            <p class="unfilled">______________</p>
+                                            <p class="name">Cancelled 🥺</p>
                                             <p class="unfilled">______________</p>
                                         </div>
                                     </div>
