--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
         <div class="item">
 
             <div class="item-parent">
-                <div class="tile">
-                    <p class="unfilled">______________</p>
-                    <p class="unfilled">______________</p> 
+                <div class="tile" style="width: fit-content;">
+                    <h3 style="margin-top: 3px; margin-bottom: 5px;">The King of Nuglings</h3>
+                    <p class="name">Pomp</p>
+                    <p>Sigvald 8 [FTA]</p>
                 </div>
             </div>
 
@@ -133,8 +134,8 @@
                     <div class="item">
                         <div class="item-parent">
                             <div class="tile">
-                                <p class="name">Qatar</p>
-                                <p>Gelt 7 [AODX]</p>
+                                <p class="name">Cancelled 🥺</p>
+                                <p class="unfilled">______________</p>
                             </div>
                         </div>
                         <div class="item-childrens">
