changed home page

--- a/index.html
+++ b/index.html
@@ -1,229 +1,26 @@
-<link rel="stylesheet" type="text/css" href="tournament.css">
-<link rel="stylesheet" type="text/css" href="styles.css">
-
 <title>The Nurgling Games</title>
 
 <meta property="og:title" content="The Nurgling Games"/>
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://the.nurgling.games"/>
+<meta property="og:url" content="https://nurgling.games"/>
 <meta property="og:description" content="The Nurgling Games will take place during the next Ulthuan"/>
 <meta property="og:image" content="http://nurgling.games/Images/Nurgle.png"/>
 <meta name="theme-color" content="#445435"/>
 
 <link rel="shortcut icon" href="Images/favicon.ico" type="image/favicon">
 
-<body style="background-color: #445435; font-family: Arial, Helvetica, sans-serif;">
+<link rel="stylesheet" type="text/css" href="styles.css">
+
+<body style="background-color: #445435; font-family: Arial, Helvetica, sans-serif; height: 95%;">
 
 
-    <div class="Header">
+    <div style="color:white; text-align: center; width: 90%; height: 70px; position: absolute; top: 40%;">
         <h1>The Nurgling Games!</h1>
+        <h2>The Nurgling Games will take place during the next Ulthuan</h2>
     </div>
 
-    <div class="TextBox">
-        <h3>What are The Nurgling Games?</h3>
-        <p>During the Chaos and Conquest Ulthuan event, The Nurgling Games will take place,
-            a tournament that will have players battle eachother with 500 minions</p>
-    </div>
 
-    <div class="wrapper">
-        <div class="item">
-
-            <div class="item-parent">
-                <div class="tile" style="width: fit-content;">
-                    <h3 style="margin-top: 3px; margin-bottom: 5px;">The King of Nuglings</h3>
-                    <p class="name">Pomp</p>
-                    <p>Sigvald 8 [FTA]</p>
-                </div>
-            </div>
-
-            <div class="item-childrens">
-                <div class="item-child">
-                    <div class="item">
-
-                        <div class="item-parent">
-                            <div class="tile">
-                                <p class="name">Pomp</p>
-
-                                <p>Sigvald 8 [FTA]</p>
-                                
-                            </div>
-                        </div>
-
-                        <div class="item-childrens">
-                            <div class="item-child">
-                                <div class="item">
-                                    <div class="item-parent">
-                                        <div class="tile">
-                                            <p class="name">Skarr Headhunter</p>
-                                            <p>Ludwig 8 [G0RB]</p>
-                                        </div>
-                                    </div>
-
-                                    <div class="item-childrens">
-
-                                        <div class="item-childrens">
-                                            <div class="item-child">
-                                                <div class="tile">
-                                                    <p class="name">Meow💚</p>
-                                                    <p>Sigvald 8 [HOC1]</p>
-                                                </div>
-                                            </div>
-                                            <div class="item-child">
-                                                <div class="item">
-
-                                                    <div class="item-parent">
-                                                        <div class="tile">
-                                                            <p class="name">Skarr Headhunter</p>
-                                                            <p>Ludwig 8 [G0RB]</p>
-                                                        </div>
-                                                    </div>
-
-                                                    <div class="item-childrens">
-                                                        <div class="item-child">
-                                                            <div class="tile">
-                                                                <p class="name">Skarr Headhunter</p>
-                                                                <p>Ludwig 8 [G0RB]</p>
-                                                            </div>
-                                                        </div>
-                                                        <div class="item-child">
-                                                            <div class="tile">
-                                                                <p class="name">Faded</p>
-                                                                <p>Gelt 8 [NYX]</p>
-                                                            </div>
-                                                        </div>
-
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="item-child">
-                                <div class="item">
-
-                                    <div class="item-parent">
-                                        <div class="tile">
-                                            <p class="name">Pomp</p>
-                                            <p>Sigvald 8 [FTA]</p>
-                                        </div>
-                                    </div>
-
-                                    <div class="item-childrens">
-                                        <div class="item-child">
-                                            <div class="tile">
-                                                <p class="name">Pomp</p>
-                                                <p>Sigvald 8 [FTA]</p>
-                                            </div>
-                                        </div>
-                                        <div class="item-child">
-                                            <div class="tile">
-                                                <p class="name">Will_You_Please</p>
-                                                <p>Gelt 9 [HUNT]</p>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="item-child">
-                    <div class="item">
-                        <div class="item-parent">
-                            <div class="tile">
-                                <p class="name">Cancelled 🥺</p>
-                                <p class="unfilled">______________</p>
-                            </div>
-                        </div>
-                        <div class="item-childrens">
-                            <div class="item-child">
-                                <div class="item">
-
-                                    <div class="item-parent">
-                                        <div class="tile">
-                                            <p class="name">Cancelled 🥺</p>
-                                            <p class="unfilled">______________</p>
-                                        </div>
-                                    </div>
-
-                                    <div class="item-childrens">
-                                        <div class="item-child">
-                                            <div class="tile">
-                                                <p class="name">ElCid 💚 gummy</p>
-                                                <p>Gelt 9 [HUNT]</p>
-                                            </div>
-                                        </div>
-                                        <div class="item-child">
-                                            <div class="tile">
-                                                <p class="name">Theimpaler💚asl</p>
-                                                <p>Gelt 9 [HUNT]</p>
-                                            </div>
-                                        </div>
-
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="item-child">
-                                <div class="item">
-
-                                    <div class="item-parent">
-                                        <div class="tile">
-                                            <p class="name">Qatar</p>
-                                            <p>Gelt 7 [AODX]</p>
-                                        </div>
-                                    </div>
-
-                                    <div class="item-childrens">
-                                        <div class="item-child">
-                                            <div class="tile">
-                                                <p class="name">DukeBefwelington</p>
-                                                <p>Sigvald 8 [WARP]</p>
-                                            </div>
-                                        </div>
-                                        <div class="item-child">
-                                            <div class="tile">
-                                                <p class="name">Qatar</p>
-                                                <p>Gelt 7 [AODX]</p>
-                                            </div>
-                                        </div>
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <br>
-
-    <div class="TextBox">
-        <h3>I'm signed up, what do I do?</h3>
-        <ul>
-            <h4 style="margin-bottom: 3px;">When you know your pairing</h4>
-            <li>Find and message the player that you've been paired with (in game, or discord if you know them there)</li>
-            <li>Decide a time that works for both of you to meet in Ulthuan</li>
-            <li>Choose who is the attacker, and who is the defender</li>
-            <br>
-            <h4 style="margin-bottom: 3px;margin-top: 3px;">When you meet in Ulthuan</h4>
-            <li>The defender will need to send exactly 500 nurglings to a tile (no other troops, no warlords, no champions)</li>
-            <li>The attacker then needs to tile hit with exactly 500 nurglings (no other troops, no warlords, no champions)</li>
-            <br>
-            <li>Get back to Fuit Gummy with the report so that the winner can be put into their next pairing</li>
-        </ul>
-    </div>
-
-    <div class="TextBox">
-        <h3>How do I sign up</h3>
-        <p>Sorry, it's too late to sign up now</p>
-    </div>
-
-    <div class="footer">
-        <p>Created by Fuit Gummy</p>
-    </div>
+    <footer style="bottom: 1em; position: absolute; margin: auto; width: 95%;">
+        <p style="font-size: 12px; text-align: center;">Created by Fuit Gummy</p>
+    </footer>
 </body>
