--- a/Countdown.html
+++ b/Countdown.html
@@ -3,12 +3,11 @@
 
 <title>The Nurgling Games</title>
 
-<meta property="og:title" content="The Nurgling Games"/>
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://nurgling.games"/>
-<meta property="og:description" content="The Nurgling Games will take place during the next Ulthuan"/>
-<meta property="og:image" content="http://nurgling.games/Images/Nurgle.png"/>
-<meta name="theme-color" content="#445435"/>
+<meta property="og:site_name" content="Hunted Cow Games">
+<meta property="og:title" content="Hunted Cow Games">
+<meta property='og:image' content='https://img2.storyblok.com/fit-in/180x300/f/151327/600x221/4b2b241ab3/hunted-cow-logo-with-text.png'>
+<meta name="theme-color" content="#ff6d01">
+<meta name="twitter:card" content="summary_large_image">
 
 <link rel="shortcut icon" href="Images/favicon.ico" type="image/favicon">
 
