--- a/Countdown.html
+++ b/Countdown.html
@@ -3,12 +3,12 @@
 
 <title>The Nurgling Games</title>
 
-<meta property="og:site_name" content="huntedcow.com">
-<meta property="og:title" content="Hunted Cow Games">
-<meta property="og:description" content="Hunted Cow Games is the leading Scottish game studio behind Warhammer: Chaos and Conquest and Operation: New Earth.">
-<meta property='og:image' content='https://img2.storyblok.com/fit-in/900x900/f/151327/1600x900/6769147a53/huntedcowrebrand1.png'>
-<meta name="theme-color" content="#ff6d01">
-<meta name="twitter:card" content="summary_small_image">
+<meta property="og:title" content="The Nurgling Games"/>
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://nurgling.games"/>
+<meta property="og:description" content="The Nurgling Games will take place during the next Ulthuan"/>
+<meta property="og:image" content="http://nurgling.games/Images/Nurgle.png"/>
+<meta name="theme-color" content="#445435"/>
 
 <link rel="shortcut icon" href="Images/favicon.ico" type="image/favicon">
 
