--- a/Countdown.html
+++ b/Countdown.html
@@ -3,12 +3,12 @@
 
 <title>The Nurgling Games</title>
 
-<meta property="og:title" content="The Nurgling Games"/>
+<meta property="og:title" content="Hunted Cow Games"/>
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://nurgling.games"/>
-<meta property="og:description" content="The Nurgling Games will take place during the next Ulthuan"/>
-<meta property="og:image" content="http://nurgling.games/Images/Nurgle.png"/>
-<meta name="theme-color" content="#445435"/>
+<meta property="og:url" content="https://huntedcow.com/"/>
+<meta property="og:description" content="Hunted Cow Games is the leading Scottish game studio behind Warhammer: Chaos and Conquest and Operation: New Earth."/>
+<meta property="og:image" content="https://account.huntedcow.com/cdn/img/emails/logo_small.png"/>
+<meta name="theme-color" content="#f18723"/>
 
 <link rel="shortcut icon" href="Images/favicon.ico" type="image/favicon">
 
